# DataGateWin

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  SEQUENCE.md  scheme.ipc
.github/: copilot-instructions.md
drivers/: command.txt
engine/: AppMain.cpp  AppMain.h  CMakeLists.txt  command.txt  engine.rc  main.cpp
engine/checks/: Listen-Events.ps1  Send-Command.ps1
engine/src/: DnsProxy.cpp  DnsProxy.h  VpnClient.cpp  VpnClient.h  WssTcpBridge.cpp  WssTcpBridge.h  main.cpp
engine/src/app/: ArgParser.cpp  ArgParser.h  CrashReporter.cpp  CrashReporter.h  EngineLifetime.cpp  EngineLifetime.h  IdleShutdownPolicy.cpp  IdleShutdownPolicy.h  IpcCommandRouter.cpp  IpcCommandRouter.h  SessionOrchestrator.cpp  SessionOrchestrator.h
engine/src/bridge/: WssBridgeRunner.cpp  WssBridgeRunner.h
engine/src/bridge/client/: TcpWssBridge.cpp  TcpWssBridge.h  UdpWssBridge.cpp  UdpWssBridge.h  WssBridgeCommon.cpp  WssBridgeCommon.h  WssBridgeOptionsView.cpp  WssBridgeOptionsView.h  WssLocalBridge.cpp  WssLocalBridge.h  WssTcpBridge.cpp  WssTcpBridge.h
engine/src/ipc/: IpcProtocol.h  IpcServer.cpp  IpcServer.h
engine/src/session/: BridgeManager.cpp  BridgeManager.h  OvpnConfigProcessor.cpp  OvpnConfigProcessor.h  OvpnTextUtils.cpp  OvpnTextUtils.h  SessionController.cpp  SessionController.h  SessionState.h  SessionStateStore.cpp  SessionStateStore.h  VpnSessionRunner.cpp  VpnSessionRunner.h  WintunAdapterManager.cpp  WintunAdapterManager.h
engine/src/util/: DatagateJsonLite.cpp  DatagateJsonLite.h  OvpnTransform.cpp  OvpnTransform.h
engine/src/vpn/: VpnRunner.cpp  VpnRunner.h  WintunHolder.cpp  WintunHolder.h  openvpn_clientapi_fwd.h
engine/src/vpn/client/: VpnClient.cpp  VpnClient.h
